--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -6,6 +6,7 @@ COPY cypress-realworld-app/ .
 WORKDIR /app/cypress-realworld-app
 RUN yarn install
 
-EXPOSE 3000 3001
+EXPOSE 3000
+EXPOSE 3001
 
 CMD ["yarn", "dev"]
