had to add -> COPY wait-and-run.sh . becuz wait-and-run file was missing

--- a/Dockerfile.cypress
+++ b/Dockerfile.cypress
@@ -1,9 +1,11 @@
 FROM cypress/included:12.17.1
 
 WORKDIR /app/ui-testing
+
 COPY ui-testing/ .
+COPY wait-and-run.sh .
 
 RUN npm install
-
+RUN chmod +x wait-and-run.sh
 
 ENTRYPOINT ["./wait-and-run.sh"]
